Made a few changes to fix the overflow issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,16 @@
 
 html {
     scroll-behavior: smooth;
-    background-color: #2b2a33;
     overflow-x: hidden;
+}
+
+
+body {
+    background-color: #2b2a33;
+    height: 100%;
+    max-height: 100vh;
+    width: 100%;
+    max-width: 100vw;
 }
 
 li {
